# yeTTY

./: .gitignore  CMakeLists.txt  CNAME  README.md  aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  autobauddetection.cpp  autobauddetection.h  autobauddetection.ui  backgroundcolorchange.cpp  backgroundcolorchange.h  backgroundcolorchange.ui  common.hpp  dbus_common.hpp  longtermrunmodedialog.cpp  longtermrunmodedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portalreadyinusedialog.cpp  portalreadyinusedialog.h  portalreadyinusedialog.ui  portselectiondialog.cpp  portselectiondialog.h  portselectiondialog.ui  settingsdialog.cpp  settingsdialog.hpp  settingsdialog.ui  triggersetupdialog.cpp  triggersetupdialog.h  triggersetupdialog.ui  yetty.version.h.in  yetty_suspend.cpp
.github/workflows/: cmake-single-platform.yml
debian/: changelog  control  copyright  watch
doc/: yetty.1.md  yetty_suspend.1.md
resources/: dev.aa55.yeTTY.desktop  dev.aa55.yeTTY.svgz  dev.aa55.yetty.desktop  dev.aa55.yetty.metainfo.xml  dev.aa55.yetty.svgz  dev.aa55.yetty.yetty.metainfo.xml
